--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,4 @@ flow.unit.null.error=\u6D41\u7A0B\u5FC5\u987B\u81F3\u5C11\u5173\u8054\u4E00\u4E2
 flow.is.in.use=\u8BE5\u6761\u6D41\u7A0B\u5DF2\u88AB\u4F7F\u7528\uFF0C\u65E0\u6CD5\u5220\u9664
 flow.type.is.in.use=\u8BE5\u6D41\u7A0B\u7C7B\u578B\u5DF2\u88AB\u4F7F\u7528\uFF0C\u65E0\u6CD5\u5220\u9664
 flow.role.is.in.use=\u8BE5\u6D41\u7A0B\u89D2\u8272\u5DF2\u88AB\u4F7F\u7528\uFF0C\u65E0\u6CD5\u5220\u9664
-
+flow.query.lack.of.unit_id=\u8BF7\u9009\u62E9\u5355\u4F4D
